--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.9",
     "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
@@ -38,6 +40,7 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
 }
