--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ PORT=8080
 # Authentication
 JWT_SECRET=your_secret_key_here
 JWT_EXPIRES_IN=1h
+
+# Email Service
+EMAIL_SERVICE=your_email_service
+EMAIL_USER=your_email_username
+EMAIL_PASS=your_email_password
