Handle user email verification functionality

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,14 @@ MONGO_IP=localhost
 MONGO_PORT=27017
 MONGO_DB_NAME=uptime-monitoring
 
-# Server Port
+# Server Domain and Port
+DOMAIN_NAME=example.com
 PORT=8080
 
 # Authentication
 JWT_SECRET=your_secret_key_here
-JWT_EXPIRES_IN=1h
+JWT_EXPIRE_TIME=1h
+VERIFICATION_TOKEN_EXPIRE_TIME=1h
 
 # Email Service
 EMAIL_SERVICE=your_email_service
