--- a/package.json
+++ b/package.json
@@ -23,21 +23,26 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/mongoose": "^5.11.97",
     "@types/node-cron": "^3.0.8",
     "@types/nodemailer": "^6.4.9",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/joi": "^17.2.3",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mongoose": "^7.4.3",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
